--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:26413",
+      "applicationUrl": "http://localhost:26413/SaleMasters",
       "sslPort": 44338
     }
   },
@@ -18,7 +18,7 @@
     "SalesManagement": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "https://localhost:5001/SaleMasters;http://localhost:5000/SaleMasters",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
